# rules_docker_compose

./: .bazelrc  README.md  WORKSPACE  defs.bzl
docker_compose/: compose.bzl  compose_test.bzl  network.bzl  providers.bzl  service.bzl
examples/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
examples/hello_world/: BUILD.bazel  main.py
