load("@rules_docker_compose//:defs.bzl", "compose", "network", "service")
load("@rules_oci//oci:defs.bzl", "oci_tarball")

oci_tarball(
    name = "httpbin",
    image = "@httpbin",
    repo_tags = ["httpbin:latest"],
)

compose(
    name = "httpbin_compose",
    networks = {
        ":httpbin_network": "httpbin",
    },
    services = {
        ":httpbin_service": "httpbin",
    },
)

service(
    name = "httpbin_service",
    image = ":httpbin",
    networks = ["hello_world"],
    ports = ["8080:80"],
    repository = "httpbin:latest",
)

network(
    name = "httpbin_network",
    external = False,
)
