"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "1.31.2")
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_python", version = "0.21.0")
bazel_dep(name = "rules_oci", version = "1.3.1")
bazel_dep(name = "platforms", version = "0.0.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "httpbin",
    digest = "sha256:9d65a5b1955d2466762f53ea50eebae76be9dc7e277217cd8fb9a24b004154f4",
    image = "docker.io/kong/httpbin",
)

oci.pull(
    name = "postgres",
    digest = "sha256:66c2a66fb183d40cde6ace5e292e2d92abc07eb447873a1a64fdb729f7b7c8cf",
    image = "196082501185.dkr.ecr.us-east-1.amazonaws.com/docker-postgres",
)

oci.pull(
    name = "python",
    digest = "sha256:a7932e04b914facd8d75475998c232cb0e3912435eb4ca7ee02fd439c2dc585c",
    image = "docker.io/library/python",
)

use_repo(oci, "httpbin")
use_repo(oci, "postgres")
use_repo(oci, "python")
