load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@rules_docker_compose//:defs.bzl", "compose", "network", "service")

py3_image(
    name = "hello_world",
    srcs = ["main.py"],
    main = "main.py",
    deps = [],
)

compose(
    name = "hello_world_compose",
    networks = {
        ":hello_world_network": "hello_world",
    },
    services = {
        ":hello_world_service": "hello_world",
    },
)

service(
    name = "hello_world_service",
    image = "//:httpbin.tar",
    networks = ["hello_world"],
)

network(
    name = "hello_world_network",
    external = False,
)
