load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("//:py_image_layer.bzl", "py_image_layer")
load("@rules_docker_compose//:defs.bzl", "compose", "compose_test", "network", "service")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "hello_world_bin",
    srcs = ["main.py"],
    main = "main.py",
    deps = [],
)

py_image_layer(
    name = "hello_world_layer",
    binary = ":hello_world_bin",
    root = "/opt",
)

oci_image(
    name = "image",
    base = "@python",
    cmd = ["/opt/hello_world/hello_world_bin"],
    tars = [":hello_world_layer"],
)

oci_tarball(
    name = "hello_world_tar",
    image = ":image",
    repo_tags = ["hello_world:latest"],
)

oci_tarball(
    name = "postgres_tar",
    image = "@postgres",
    repo_tags = ["postgres:latest"],
)

compose(
    name = "hello_world_compose",
    networks = {
        ":hello_world_network": "network",
    },
    services = {
        ":hello_world_service": "service",
        ":hello_world_database": "database",
    },
)

compose_test(
    name = "hello_world_compose_test",
    networks = {
        ":hello_world_network": "network",
    },
    services = {
        ":hello_world_service": "test",
        ":hello_world_database": "database",
    },
)

service(
    name = "hello_world_service",
    image = "hello_world_tar",
    networks = ["network"],
    repository = "hello_world:latest",
)

service(
    name = "hello_world_database",
    environment = {
        "POSTGRES_PASSWORD": "password",
    },
    image = ":postgres_tar",
    networks = ["network"],
    repository = "postgres:latest",
)

network(
    name = "hello_world_network",
    external = False,
)
